--- a/SPCK/home.html
+++ b/SPCK/home.html
@@ -20,5 +20,62 @@
                  
             </div>
         </div>
+
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/diy-paper-flowers-1582662788.jpg" class="banner">
+
+        <h2>Sản phẩm của chúng tôi</h2>
+        <div class="prod">
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 1<br>Giá:</p>
+            </div>
+
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 2<br>Giá:</p>
+            </div>
+
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 3<br>Giá:</p>
+            </div>
+
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 4<br>Giá:</p>
+            </div>
+
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 5<br>Giá:</p>
+            </div>
+
+            <div class="item">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 6<br>Giá:</p>
+            </div>
+        </div>
+        <h2>Sản phẩm giảm giá</h2>
+        <div class="prod">
+            <div class="item down">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 7<br>Giá:</p>
+            </div>
+            <div class="item down">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 8<br>Giá:</p>
+            </div>
+            <div class="item down">
+                <img src="https://images.pexels.com/photos/736230/pexels-photo-736230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <p>Sản phẩm 9<br>Giá:</p>
+            </div>
+        </div>
+
+        <div class="contact">
+            <h2>Thông tin liên hệ</h2>
+            <p>Số điện thoại:</p>
+            <p>Email:</p>
+            <p>Facebook:</p>
+        </div>
     </body>
 </html>
